--- a/templates/transfer-dialog.hbs
+++ b/templates/transfer-dialog.hbs
@@ -56,7 +56,7 @@
 
         </div>
         <div class="form-group">
-          <div class="notes">
+          <div>
             {{localize 'SDM.TotalToCharge'}}:
             <strong>€<span id="sdm-total-charge">0</span></strong>
           </div>
