--- a/templates/item/gear/header.hbs
+++ b/templates/item/gear/header.hbs
@@ -63,16 +63,27 @@
 
         {{#if item.system.is_hallmark}}
         <div class='resource'>
-          <label class='resource-label'>{{localize 'SDM.FieldExperience'}}</label>
+          <label class='resource-label' for='system.hallmark.experience'>{{localize 'SDM.FieldExperience'}}</label>
           <input type='text' name='system.hallmark.experience' value='{{system.hallmark.experience}}' />
         </div>
         {{/if}}
+
+
+        <div class='resource'>
+          <label class='resource-label' for="system.charges.max">{{localize 'SDM.ItemCharges'}}</label>
+          <div class='resource-content flexrow flex-center flex-between flex-group-center'>
+            <input type='text' name="system.charges.value" value="{{system.charges.value}}" data-dtype='Number' data-tooltip="{{localize 'SDM.ItemCharges'}}"/>
+            <span> / </span>
+            <input type='text' name="system.charges.max" value="{{system.charges.max}}" data-dtype='Number' data-tooltip="{{localize 'SDM.ItemMaxCharges'}}"/>
+          </div>
+        </div>
+
       </div>
   </header>
   <header>
     <div class='grid grid-3col'>
     {{#if (ne item.system.size.unit 'cash')}}
-      <div class="resource ">
+      <div class="resource">
         <label class='resource-label '>{{localize 'SDM.ItemGearType'}}</label>
         <select id='gearType' name='system.type' class="resource-content">
           {{selectOptions config.gearType localize=true selected=system.type sort=true blank='TYPE.Gear'}}
