feat: :sparkles: Add new roll_mode key to active effects changes

--- a/templates/custom-roll-dialog.hbs
+++ b/templates/custom-roll-dialog.hbs
@@ -49,7 +49,7 @@
     <div class="form-group mt-10">
       <label for="rollMode">{{localize 'SDM.RollMode'}}</label>
       <select name="rollMode" id="rollMode">
-        {{selectOptions rollModes localize=true selected='normal'}}
+        {{selectOptions rollModes localize=true selected=selectedRollMode}}
       </select>
     </div>
     {{#if (ne type 'save')}}
