--- a/templates/reaction-roll-dialog.hbs
+++ b/templates/reaction-roll-dialog.hbs
@@ -16,7 +16,7 @@
     <div class="form-group mt-10">
       <label for="rollMode">{{localize 'SDM.RollMode'}}</label>
       <select name="rollMode" id="rollMode">
-        {{selectOptions rollModes localize=true selected='normal'}}
+        {{selectOptions rollModes localize=true selected=selectedRollMode}}
       </select>
     </div>
   </form>
