feat: :sparkles: Add defeat and corruption to character sheet

--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -116,7 +116,7 @@ $c-azure: var(--sdm-c-azure);
 $c-royal: var(--sdm-c-royal);
 $c-heart: var(--sdm-c-heart);
 $c-plum: var(--sdm-c-plum);
-
+$c-violet: var(--sdm-c-violet);
 $c-blood: var(--sdm-c-blood);
 
 $c-readied: var(--sdm-c-readied);
