--- a/templates/item/trait/header.hbs
+++ b/templates/item/trait/header.hbs
@@ -13,11 +13,13 @@
       </div>
     </div>
     <div class='grid grid-2col'>
+      {{#if (ne system.type 'corruption')}}
       <div class='resource mr-10'>
         <label class='resource-label'>{{localize 'SDM.SourcesToLearn'}}
           <input type='text' name='system.learning.required_successes' value='{{system.learning.required_successes}}' data-dtype='Number' />
         </label>
       </div>
+      {{/if}}
 
       <div class='resource flex-group-center'>
         {{#if (gt system.learning.required_successes 0)}}
