feat: :sparkles: Add support to dice oracles

--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -89,8 +89,18 @@
       </div>
       {{/if}}
 
-      {{#if (and (gt item.system.slots_taken 1) (ne item.system.size.unit 'sacks'))}}[{{item.system.slots_taken}}] {{/if}}
-      {{#if (and (gt item.system.slots_taken 1) (eq item.system.size.unit 'sacks'))}}[{{toSacks item.system.slots_taken}}] {{/if}}
+      {{#if (and (gt item.system.slots_taken 1) (ne item.system.size.unit 'sacks'))}}
+      <span
+       data-tooltip="{{item.system.slots_taken}} {{localize 'SDM.UnitStones'}}"
+      >[{{item.system.slots_taken}}]&nbsp;
+      </span>
+      {{/if}}
+      {{#if (and (gt item.system.slots_taken 1) (eq item.system.size.unit 'sacks'))}}
+      <span
+       data-tooltip="{{toSacks item.system.slots_taken false}} {{ifThen (gt (toSacks item.system.slots_taken false) 1) (localize 'SDM.UnitSacks') (localize 'SDM.UnitSack')}}"
+      >[{{toSacks item.system.slots_taken}}]&nbsp;
+      </span>
+      {{/if}}
 
       {{#if (eq item.system.size.unit 'cash')}} {{item.system.quantity}} {{/if}}
       {{#if item.system.is_hallmark}}<i class="fa-regular fa-star hallmark" data-tooltip="{{localize 'SDM.HallmarkItem'}}"></i>{{/if}}
