--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -101,6 +101,30 @@
           </div>
         </div>
 
+         <div class='resource'>
+          <label class='resource-label'>
+            {{localize 'SDM.FieldCostPerWeek'}}
+          </label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <input type='text' name='system.cost' value='{{system.cost}}' />
+          </div>
+        </div>
+
+         <div class='resource'>
+          <label class='resource-label'>
+            {{localize 'SDM.FieldSupplyPerWeek'}}
+          </label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <input type='text' name='system.supply' value='{{system.supply}}' />
+          </div>
+        </div>
+
+        <div class='resource'>
+        </div>
+
+        <div class='resource'>
+        </div>
+
         <div class="ability grid-span-1 flexrow">
           <div class='resource-label rollable' data-action='rollNPCMorale'
             data-label="{{localize 'SDM.Morale'}}">
