feat: :zap: Improve caravan crew UI

--- a/templates/actor/caravan/routes.hbs
+++ b/templates/actor/caravan/routes.hbs
@@ -15,7 +15,7 @@
                 data-action='addRoute'
               >
                 <i class='fa-solid fa-plus'></i>
-                {{localize 'SDM.DOCUMENT.New' type=(localize 'SDM.Route')}}
+                {{localize 'SDM.DOCUMENT.NewF' type=(localize 'SDM.Route')}}
               </a>
               {{/if}}
             </div>
