--- a/templates/actor/caravan/crew.hbs
+++ b/templates/actor/caravan/crew.hbs
@@ -5,13 +5,9 @@
       <section>
         <ol class='items-list full-list'>
           <li class='item flexrow items-header caravan-item-header' style="position: sticky;">
-            <div class=''></div>
-            <div class=''></div>
-            <div class=''></div>
-            <div class=''></div>
-            <div class=''>
+            <div class='grid-span-5'>
               {{#if @root.editable}}
-                Drop NPCs to add to Crew
+                {{localize 'SDM.CaravanDropNPCs'}}
               {{/if}}
             </div>
           </li>
@@ -30,7 +26,7 @@
 
             <div class='resource grid-span-2'>
               <label class='resource-label'>
-                {{localize 'SDM.FieldSkills'}}
+                {{localize 'SDM.Skill'}}
               </label>
               <div class='resource-content'>
                 <select name="system.crew.{{key}}.skill" id="selectedSkill">
