--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -104,7 +104,7 @@
 
       {{#if (eq item.system.size.unit 'cash')}} {{item.system.quantity}} {{/if}}
       {{#if item.system.is_hallmark}}<i class="fa-regular fa-star hallmark" data-tooltip="{{localize 'SDM.HallmarkItem'}}"></i>{{/if}}
-      {{#if (gt item.system.charges.max 0) }} <span
+      {{#if (and (gt item.system.charges.max 0) (has item.system.features 'charges')) }} <span
        data-tooltip="{{localize 'SDM.ItemCharges'}}"
       >({{item.system.charges.value}}/{{item.system.charges.max}})&nbsp;</span>{{/if}}
       {{item.name}}
