--- a/templates/actor/trait.hbs
+++ b/templates/actor/trait.hbs
@@ -35,7 +35,7 @@
         </div>
       {{/if}}
       {{#if trait.system.is_hallmark}}<i class="fa-regular fa-star hallmark" data-tooltip="{{localize 'SDM.HallmarkItem'}}"></i>{{/if}}
-       {{#if (gt trait.system.charges.max 0) }} <span
+       {{#if (and (gt trait.system.charges.max 0) (has trait.system.features 'charges'))}} <span
        data-tooltip="{{localize 'SDM.ItemCharges'}}"
       >({{trait.system.charges.value}}/{{trait.system.charges.max}})&nbsp;</span>{{/if}}
       {{trait.name}}
