--- a/templates/item/gear/header.hbs
+++ b/templates/item/gear/header.hbs
@@ -71,7 +71,7 @@
         </div>
         {{/if}}
 
-        {{#unless (or (eq system.size.unit 'cash')(eq system.type 'corruption'))}}
+        {{#unless (or (eq system.size.unit 'cash')(eq system.type 'corruption') (not (has system.features 'charges')))}}
         <div class='resource'>
           <label class='resource-label' for="system.charges.max">{{localize 'SDM.ItemCharges'}}</label>
           <div class='resource-content flexrow flex-center flex-between flex-group-center'>
@@ -137,7 +137,7 @@
 
       {{/if}}
 
-      {{#if (eq item.system.type 'weapon')}}
+      {{#if (eq system.type 'weapon')}}
       <div class='resource'>
         <label class='resource-label'>
           {{localize 'SDM.WeaponDamage'}}
